--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="portfolio.css">
-    <title>portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+<title>portfolio</title>
+
 </head>
 <body>
     
     <div class="container">
 
-<header id="hd">
+
+
+    <div class="hd-div-1">
+
+        <div class="div-2"><a href=""><img src="/imgs/BM-LOGO-3_edited.jpg" alt="BM-logo" class="img"></a></div>
+
+    </div>
     
-<nav id="nv"> </nav>
-
-</header>  
-
-<main id="mn"> </main>  
-
-<footer id="ft"> </footer>
 
     </div>
 
