--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="hd-div-1">
 
-        <div class="div-2"><a href=""><img src="/imgs/BM-LOGO-3_edited.jpg" alt="BM-logo" class="img"></a></div>
+        <div class="div-2"><a href="index-2.html"><img src="/imgs/BM-LOGO-3_edited.jpg" alt="BM-logo" class="img"></a></div>
 
     </div>
     
