--- a/index-2.html
+++ b/index-2.html
@@ -4,16 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-2.css">
+    <link rel="stylesheet" href="portfolio-2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Rubik+Distressed&family=Ubuntu&display=swap" rel="stylesheet">
     <title>portfolio</title>
 </head>
 <body>
-    
-<header></header>
-<nav></nav>
-<main></main>
-<footer></footer>
+ <div class="container">
 
+<nav id="nav">
+    
+<p class="nav-p-1">
+    <img src="/imgs/BM-LOGO-3_edited.jpg" alt="BM-LOGO" class="nav-img-1">
+    <span class="nav-sp-1">BEGAD.MH</span></p>
+
+    <div class="nav-div-content-container">
+
+<p class="nav-p-2"><a href="#" class="nav-a-1">Home</a> </p>
+<p class="nav-p-2"><a href="#" class="nav-a-1">About</a></p>
+<p class="nav-p-2"><a href="#" class="nav-a-1">Experience</a></p>
+<p class="nav-p-2"><a href="#" class="nav-a-1">Work</a></p>
+<p class="nav-p-2"><a href="#" class="nav-a-1">Blog</a></p>
+
+    </div>
+
+</nav>    
+
+<main id="mn">
+
+<p class="mn-p-1"> <span>About</span> </p>
+
+<div class="mn-div-content-container-1">
+
+<div class="mn-div-1"><img src="/imgs/carizma-3.JPG" alt="the developer" class="mn-img-1"></div>
+
+<p class="mn-p-2"> <span> Hi, I'm Begad Mohamed/ 
+    Lorem ipsum dolor sit amet consectetur,
+     adipisicing elit. Eos, iste? 
+    Aliquam recusandae ut quidem id excepturi ad quia eos.
+     Porro nihil officiis id architecto eveniet vero eligendi necessitatibus illum aspernatur.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi velit doloremque,
+     non consequuntur magnam ducimus explicabo accusantium assumenda rerum,
+      nihil maiores eveniet sint eligendi recusandae, hic eius mollitia facilis error.</span></p>
+
+</div>
+
+<p class="mn-p-1"> <span>Experience</span> </p>
+
+<div class="mn-div-content-container-2">
+
+<div class="mn-div-2">
+
+<p class="mn-p-3"><span class="mn-sp-1">HTML5/CSS3</span>
+    <span class="mn-sp-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+         Animi neque tempore veniam reprehenderit laboriosam? Perferendis quasi alias maiores,
+         sit quae est hic! Officia ab fugit eos repudiandae. Aperiam, eius eligendi?</span></p>
+<p class="mn-p-3"><span class="mn-sp-1">Javascript</span>
+    <span class="mn-sp-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Animi neque tempore veniam reprehenderit laboriosam? Perferendis quasi alias maiores,
+        sit quae est hic! Officia ab fugit eos repudiandae. Aperiam, eius eligendi?</span></p>
+<p class="mn-p-3"><span class="mn-sp-1">Frontend</span>
+    <span class="mn-sp-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Animi neque tempore veniam reprehenderit laboriosam? Perferendis quasi alias maiores,
+        sit quae est hic! Officia ab fugit eos repudiandae. Aperiam, eius eligendi?</span></p>
+
+</div>
+
+</div>
+
+</main>
+
+<footer id="ft"></footer>
+
+</div>
 
 </body>
 </html>
