--- a/index-2.html
+++ b/index-2.html
@@ -16,7 +16,7 @@
 <nav id="nav">
     
 <p class="nav-p-1">
-    <img src="/imgs/BM-LOGO-3_edited.jpg" alt="BM-LOGO" class="nav-img-1">
+    <img src="./imgs/BM-LOGO-3_edited.jpg" alt="BM-LOGO" class="nav-img-1">
     <span class="nav-sp-1">BEGAD.MH</span></p>
 
     <div class="nav-div-content-container">
@@ -37,7 +37,7 @@
 
 <div class="mn-div-content-container-1">
 
-<div class="mn-div-1"><img src="/imgs/carizma-3.JPG" alt="the developer" class="mn-img-1"></div>
+<div class="mn-div-1"><img src="./imgs/carizma-3.JPG" alt="the developer" class="mn-img-1"></div>
 
 <p class="mn-p-2"> <span> Hi, I'm Begad Mohamed/ 
     Lorem ipsum dolor sit amet consectetur,
