--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="icon" href="./imgs/logo-2.jpg">
     <link rel="stylesheet" href="portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,7 @@
 
     <div class="hd-div-1">
 
-        <div class="div-2"><a href="index-2.html"><img src="./imgs/BM-LOGO-3_edited - Copy_edited.jpg" alt="BM-logo" class="img"></a></div>
+        <div class="div-2"><a href="index-2.html"><img src="./imgs/logo-2.jpg" alt="BM-logo" class="img"></a></div>
 
     </div>
     
