--- a/index-2.html
+++ b/index-2.html
@@ -19,19 +19,19 @@
 
 <nav id="nav">
     
-<p class="nav-p-1">
+<div class="nav-div-1">
     <img src="./imgs/logo-2.jpg" alt="BM-LOGO" class="nav-img-1">
     <span class="nav-sp-1"><a href="#" class="nav-a"><strong>BEGAD<b class="bold">.MH</b></strong></a></span>
-</p>
+</div>
 
     <div class="nav-div-content-container">
 
 <p class="nav-p-2"><a href="#discover" class="nav-a-1">About</a></p>
-<p class="nav-p-2"><a href="#" class="nav-a-1">Experience</a></p>
-<p class="nav-p-2"><a href="#" class="nav-a-1">services</a></p>
-<p class="nav-p-2"><a href="#" class="nav-a-1">Portfolio</a></p>
-<p class="nav-p-2"><a href="#" class="nav-a-1">Blog</a></p>
-<p class="nav-p-3"><a href="#" class="nav-a-2">Contact Me</a></p>
+<p class="nav-p-2"><a href="#experience" class="nav-a-1">Experience</a></p>
+<p class="nav-p-2"><a href="#services" class="nav-a-1">services</a></p>
+<p class="nav-p-2"><a href="#portfolio" class="nav-a-1">Portfolio</a></p>
+<p class="nav-p-2"><a href="#ft" class="nav-a-1">Blog</a></p>
+<p class="nav-p-3"><a href="" class="nav-a-2">Contact Me</a></p>
 
     </div>
 
@@ -61,12 +61,12 @@
 
 <main id="mn">
 
-<div class="mn-div-about">
+<div class="mn-div-about" id="discover">
 
 <div class="mn-div-1"><img src="./imgs/carizma-3.JPG" alt="the developer photo" class="mn-img-1"></div>
 <p class="mn-p-1">
 
-<span class="mn-sp-1" id="discover">Discover</span>
+<span class="mn-sp-1">Discover</span>
 <span class="mn-sp-2">About Me</span>
 
 <br>
@@ -99,7 +99,7 @@
 
 </div>
 
-<div class="mn-div-experience">
+<div class="mn-div-experience" id="experience">
 
 <div class="mn-p-4">
 
@@ -158,7 +158,7 @@
     
     </div>
 
-<div class="mn-div-services">
+<div class="mn-div-services" id="services">
 
 <p class="mn-p-2">
 
@@ -172,7 +172,7 @@
 
 <div class="mn-div-2">
 
-<span class="mn-sp-10">Breative & Responsive Design</span>
+<span class="mn-sp-10">Creative & Responsive Design</span>
 
 <span class="mn-sp-11">Lorem ipsum dolor sit amet consectetur adipisicing elit.
      Soluta voluptate, dicta dignissimos atque quae officia impedit,
@@ -208,7 +208,7 @@
 
 </div>
 
-<div class="mn-div-portfolio">
+<div class="mn-div-portfolio"  id="portfolio">
 
 <p class="mn-p-3">
 <span class="mn-sp-12">My Work</span>
@@ -248,9 +248,10 @@
 
  <a href="https://www.linkedin.com/in/begad-mohamed-159173235/" class="ft-a-1"><i class="fa-brands fa-linkedin fa-lg"></i></a> 
 
+<span class="ft-sp-1">© Copyright 2022</span>
 
 </div>
-<div class="ft-div-2"><span class="ft-sp-1">© Copyright 2022</span></div>
+
 
 </div>
 
